--- a/FailedRequestTraceViewer2.csproj
+++ b/FailedRequestTraceViewer2.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CWatchFolders.cs" />
     <Compile Include="FRTUtil.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
